Update 'FindCommand' Test Cases
This commit introduces new Test Cases for 'FindCommand' and the various Parsers.
This commit also fixed minor documentation bugs from the previous 'FindCommand' commit.