@@ -28,8 +28,11 @@ import seedu.address.logic.parser.exceptions.ParseException;
 import seedu.address.model.person.EmailContainsKeywordsPredicate;
 import seedu.address.model.person.MultiplePredicates;
 import seedu.address.model.person.NameContainsKeywordsPredicate;
+import seedu.address.model.person.NationalityContainsKeywordsPredicate;
 import seedu.address.model.person.Person;
+import seedu.address.model.person.PhoneContainsKeywordsPredicate;
 import seedu.address.model.person.TagContainsKeywordsPredicate;
+import seedu.address.model.person.TutorialGroupContainsKeywordsPredicate;
 import seedu.address.testutil.EditPersonDescriptorBuilder;
 import seedu.address.testutil.PersonBuilder;
 import seedu.address.testutil.PersonUtil;
@@ -74,11 +77,74 @@ public class AddressBookParserTest {
     }
 
     @Test
-    public void parseCommand_find() throws Exception {
-        List<String> keywords = Arrays.asList("n/foo", "e/bar@a.com", "t/baz");
+    public void parseCommand_findNamePredicate() throws Exception {
+        List<String> keywords = Arrays.asList("n/Mario");
+        NameContainsKeywordsPredicate predicate =
+                new NameContainsKeywordsPredicate(List.of("Mario"));
+        FindCommand command = (FindCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
+        assertEquals(new FindCommand(predicate), command);
+    }
+
+    @Test
+    public void parseCommand_findPhonePredicate() throws Exception {
+        List<String> keywords = Arrays.asList("p/995999");
+        PhoneContainsKeywordsPredicate predicate =
+                new PhoneContainsKeywordsPredicate(List.of("995999"));
+        FindCommand command = (FindCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
+        assertEquals(new FindCommand(predicate), command);
+    }
+
+    @Test
+    public void parseCommand_findEmailPredicate() throws Exception {
+        List<String> keywords = Arrays.asList("e/acbar@rabca.com");
+        EmailContainsKeywordsPredicate predicate =
+                new EmailContainsKeywordsPredicate(List.of("acbar@rabca.com"));
+        FindCommand command = (FindCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
+        assertEquals(new FindCommand(predicate), command);
+    }
+
+    @Test
+    public void parseCommand_findNationalityPredicate() throws Exception {
+        List<String> keywords = Arrays.asList("nat/North Korea");
+        NationalityContainsKeywordsPredicate predicate =
+                new NationalityContainsKeywordsPredicate(List.of("North Korea"));
+        FindCommand command = (FindCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
+        assertEquals(new FindCommand(predicate), command);
+    }
+
+    @Test
+    public void parseCommand_findTutorialGroupPredicate() throws Exception {
+        List<String> keywords = Arrays.asList("tg/123456789");
+        TutorialGroupContainsKeywordsPredicate predicate =
+                new TutorialGroupContainsKeywordsPredicate(List.of("123456789"));
+        FindCommand command = (FindCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
+        assertEquals(new FindCommand(predicate), command);
+    }
+
+    @Test
+    public void parseCommand_findTagPredicate() throws Exception {
+        List<String> keywords = Arrays.asList("t/Wowz");
+        TagContainsKeywordsPredicate predicate =
+                new TagContainsKeywordsPredicate(List.of("Wowz"));
+        FindCommand command = (FindCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
+        assertEquals(new FindCommand(predicate), command);
+    }
+
+    @Test
+    public void parseCommand_findMultiplePredicates() throws Exception {
+        List<String> keywords = Arrays.asList("n/foo", "p/999", "e/bar@a.com", "nat/DPRK", "tg/420", "t/baz");
         MultiplePredicates predicate = new MultiplePredicates(new ArrayList<Predicate<Person>>(List.of(
                 new NameContainsKeywordsPredicate(List.of("foo")),
+                new PhoneContainsKeywordsPredicate(List.of("999")),
                 new EmailContainsKeywordsPredicate(List.of("bar@a.com")),
+                new NationalityContainsKeywordsPredicate(List.of("DPRK")),
+                new TutorialGroupContainsKeywordsPredicate(List.of("420")),
                 new TagContainsKeywordsPredicate(List.of("baz"))
         )));
         FindCommand command = (FindCommand) parser.parseCommand(
